# OTUS_08.homework

./: CMakeLists.txt  Doxyfile  README.md  boost_unit_test.cpp  compare.cpp  compare.h  finder.cpp  finder.h  google_unit_test.cpp  hash.cpp  hash.h  main.cpp
.github/workflows/: release.yml
docs/: mainpage.h
